Refactor rate endpoint
